[fix] 삼색등 버그 수정

--- a/classifier_model.ipynb
+++ b/classifier_model.ipynb
@@ -227,29 +227,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fbf3325d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "75437196",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# X_train = X_train.to_numpy()\n",
-    "\n",
-    "# for i in range(100, 109):\n",
-    "#     plt.subplot(330 + (i+1))\n",
-    "#     plt.imshow(X_train[i].reshape(28,28), cmap='gray_r')\n",
-    "#     plt.title(chr(mapp[y_train[i]]))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 43,
    "id": "a18b33a0",
    "metadata": {},
@@ -270,13 +247,21 @@
     "y_test = data_test.iloc[:,0]\n",
     "\n",
     "X_train = X_train.to_numpy()\n",
+    "y_train = y_train.to_numpy()\n",
+    "\n",
     "X_test = X_test.to_numpy()\n",
     "y_test = y_test.to_numpy()\n",
-    "print(X_train.shape, y_train.shape,X_test.shape,y_test.shape)\n",
     "\n",
     "X_train_scaled = X_train / 255.0\n",
     "X_train_scaled = X_train_scaled.astype('float32')\n",
-    "X_train_scaled,val_scaled,y_train,val_target = train_test_split(X_train_scaled,y_train,train_size=0.2, random_state=42)"
+    "X_test_scaled = X_train / 255.0\n",
+    "X_test_scaled = X_test_scaled.astype('float32')\n",
+    "\n",
+    "X_train_scaled = X_train_scaled.reshape(X_train_scaled[0],28,28,1)\n",
+    "X_test_scaled = X_train_scaled.reshape(-1,28,28,1)\n",
+    "\n",
+    "X_train_scaled,val_scaled,y_train,val_target = train_test_split(X_train_scaled,y_train,train_size=0.2, random_state=42)\n",
+    "print(X_train.shape, y_train.shape,X_test.shape,y_test.shape)\n"
    ]
   },
   {
@@ -379,7 +364,6 @@
     }
    ],
    "source": [
-    "X_train_scaled = X_train_scaled.reshape(-1,28,28)\n",
     "y_train = y_train.to_numpy()\n",
     "val_scaled = val_scaled.reshape(-1,28,28)\n",
     "val_target = val_target.to_numpy()\n",
